--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">NG simple auth</a>
+      <a class="navbar-brand" href="#">Employees CRUD</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -10,9 +11,23 @@
           <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActivate = "activate" routerLink="/">Home</a>
           </li>
+        </ul>
+        <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" routerLinkActivate = "activate" routerLink="/employees">Employees</a>
-          </li>
+            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Employees
+                  </a>
+                  <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                    <li><a class="dropdown-item" routerLink="/newemployee">New employee</a></li>
+                    <li><a class="dropdown-item" routerLink="/employees">All employees</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+        </li>
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -23,8 +38,20 @@
     </div>
   </div>
 </nav>
-
 <div class="container p-5">
   <router-outlet></router-outlet>
 </div>
 
+<footer class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <p>footer 1</p>  
+    </div>
+    <div class="col-md-4">
+      <p>footer 2</p>  
+    </div>
+    <div class="col-md-4">
+      <p>footer 3</p>  
+    </div>
+  </div>
+</footer>
