--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,24 @@
-<p>home works!</p>
+<div class="text-center">
+    <h3>Welcome to home</h3>
+    <p>In this app you can create, read, update or delete employee's information from api rest </p>
+</div>
+<div class="text-center">
+    <h4>Powered by</h4>
+</div>
+<div class="row p-3 text-center">
+    <div class="col-md-4">
+        <a href="https://nodejs.org/en/">
+            <img src= "https://cdn.iconscout.com/icon/free/png-512/node-js-1174925.png" width="100" height="100">
+        </a>
+    </div>
+    <div class="col-md-4">
+        <a href="https://angular.io/">
+            <img src= "https://cdn.worldvectorlogo.com/logos/angular-icon.svg" width="100" height="100">  
+        </a>
+    </div>
+    <div class="col-md-4">
+        <a href="https://getbootstrap.com/">
+            <img src= "https://img.icons8.com/color/452/bootstrap.png" width="100" height="100">
+        </a>
+    </div>
+</div>
