--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,26 +1,82 @@
 <div class="container p-5">
     <div class="text-center">
-        <h3>Welcome to home</h3>
+        <h2>Welcome to home</h2>
         <p>In this app you can create, read, update or delete employee's information from api rest </p>
     </div>
-    <div class="text-center">
-        <h4>Powered by</h4>
+    <div class="text-center p-2 ml-5 mr-5">
+        <h4 class="mt-5">Powered by</h4>
+        <div class="row p-5 text-center">
+            <div class="col-md-4">
+                <a href="https://nodejs.org/en/">
+                    <img src= "https://cdn.iconscout.com/icon/free/png-512/node-js-1174925.png" width="100" height="100">
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="https://angular.io/">
+                    <img src= "https://cdn.worldvectorlogo.com/logos/angular-icon.svg" width="100" height="100">  
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="https://getbootstrap.com/">
+                    <img src= "https://img.icons8.com/color/452/bootstrap.png" width="100" height="100">
+                </a>
+            </div>
+        </div>
     </div>
-    <div class="row p-3 text-center">
-        <div class="col-md-4">
-            <a href="https://nodejs.org/en/">
-                <img src= "https://cdn.iconscout.com/icon/free/png-512/node-js-1174925.png" width="100" height="100">
+    <div class="row p-3 text-center ml-5 mr-5">
+        <div class="col-md-6">
+            <a href="https://www.mongodb.com/">
+                <img src= "https://img.icons8.com/color/452/mongodb.png" width="100" height="100">
             </a>
         </div>
-        <div class="col-md-4">
-            <a href="https://angular.io/">
-                <img src= "https://cdn.worldvectorlogo.com/logos/angular-icon.svg" width="100" height="100">  
+        <div class="col-md">
+            <a href="https://material.io/">
+                <img src= "https://pbs.twimg.com/profile_images/925576484122779648/ucVTUoPg_400x400.jpg" width="100" height="100">  
             </a>
         </div>
-        <div class="col-md-4">
-            <a href="https://getbootstrap.com/">
-                <img src= "https://img.icons8.com/color/452/bootstrap.png" width="100" height="100">
-            </a>
+    </div>
+    <div class="row p-5">
+        <div class="col-md-1 sm-0"></div>
+        <div class="col-md-10">
+            <h4 class="text-center p-2">Repositories on github</h4>
+            <ngb-accordion [closeOthers]="true">
+                <ngb-panel id="static-1">
+                  <ng-template ngbPanelTitle class="container-fluid text-left pl-0">
+                    <div class="d-flex">
+                        <span class="material-icons mr-3">monitor</span>
+                        <h4>Front</h4>
+                    </div>
+                  </ng-template>
+                  <ng-template ngbPanelContent>
+                    <div class="d-flex ml-4">
+                        <a href="https://github.com/ManuelEspitia/AngularTest">
+                            <i class="material-icons mr-2">exit_to_app</i>
+                        </a>
+                        <a href="https://github.com/ManuelEspitia/AngularTest">
+                            https://github.com/ManuelEspitia/AngularTest
+                        </a>
+                    </div>
+                  </ng-template>
+                </ngb-panel>
+                <ngb-panel id="static-2">
+                  <ng-template ngbPanelTitle>
+                    <div class="d-flex">
+                        <i class="material-icons mr-3">table_rows</i>
+                        <h4>Back</h4>
+                    </div>
+                  </ng-template>
+                  <ng-template ngbPanelContent>
+                    <div class="d-flex ml-4">
+                        <a href="https://github.com/OmarGReyes/simpleAuthCRUDAPI">
+                            <i class="material-icons mr-2">exit_to_app</i>
+                        </a>
+                        <a href="https://github.com/OmarGReyes/simpleAuthCRUDAPI">
+                            https://github.com/OmarGReyes/simpleAuthCRUDAPI
+                        </a>
+                    </div>
+                  </ng-template>
+                </ngb-panel>
+              </ngb-accordion>
         </div>
     </div>
 </div>
