--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -37,12 +37,16 @@
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActivate = "activate" routerLink="/signin">SignIn</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActivate = "activate" routerLink="/signin">SignUp</a>
-          </li>
+          <ng-container *ngIf="!authService.loggedIn(); else logOut">
+            <li class="nav-item">
+              <a class="nav-link" routerLinkActivate = "activate" routerLink="/signin">SignIn</a>
+            </li>
+          </ng-container>
+          <ng-template #logOut>
+            <li class="nav-item">
+              <a class="nav-link" style="cursor: pointer;" routerLink="/" (click)="authService.logOut()">LogOut</a>
+            </li>
+          </ng-template>
         </ul>
       </div>
     </div>
@@ -52,5 +56,7 @@
 <div class="container p-5">
   <router-outlet></router-outlet>
 </div>
+
+<app-footer></app-footer>
 
 
