--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -1,8 +1,15 @@
-<div class="row">
+<div class="row p-2">
+    <div class="col text-center ">
+        <h2>Welcome</h2>
+    </div>
+</div>
+<div class="row p-1">
     <div class="col-md-4 mx-auto">
         <div class="card">
             <div class="card-header">
-                Login
+                <h4>
+                    Login
+                </h4>
             </div>
             <div class="card-body">
                 <form (submit)="signIn()">
