--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,14 +8,14 @@
         <div class="col-md-6">
             <h6>Backend developer</h6>
             <p></p>
-            <a href="https://www.linkedin.com/in/omargreyes/">
+            <a target="_blank" href="https://www.linkedin.com/in/omargreyes/">
                 <li> Omar G Reyes </li>
             </a>
         </div>
         <div class="col">
             <h6>Frontend developer</h6>
             <p></p>
-            <a href="https://www.linkedin.com/in/arcesio-espitia/">
+            <a target="_blank" href="https://www.linkedin.com/in/arcesio-espitia/">
                 <li> Arcesio M. Espitia R.</li>
             </a>
         </div>  
